--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thead>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Amit Kumar</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Ajit Kumar</td>
+			</tr>
+			
+		</tbody>
     <script type="text/javascript" src="./script.js">
 </script>
 
